--- a/public/signup.css
+++ b/public/signup.css
@@ -1,113 +1,95 @@
-
-html,
-body {
-height: 100%;
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
-
-.bg {
-position:absolute;
-z-index:-1;
-top:0;
-right:0;
-bottom:0;
-left:0;
-
-background-image: radial-gradient(circle at 30% 86%, rgba(255,255,255,0.03) 0%, rgba(255,255,255,0.03) 8%,transparent 8%, transparent 92%),radial-gradient(circle at 55% 100%, rgba(255,255,255,0.03) 0%, rgba(255,255,255,0.03) 8%,transparent 8%, transparent 92%),radial-gradient(circle at 40% 75%, rgba(255,255,255,0.03) 0%, rgba(255,255,255,0.03) 6%,transparent 6%, transparent 94%),radial-gradient(circle at 7% 99%, rgba(255,255,255,0.03) 0%, rgba(255,255,255,0.03) 6%,transparent 6%, transparent 94%),radial-gradient(circle at 69% 76%, rgba(255,255,255,0.03) 0%, rgba(255,255,255,0.03) 6%,transparent 6%, transparent 94%),radial-gradient(circle at 2% 35%, rgba(255,255,255,0.03) 0%, rgba(255,255,255,0.03) 6%,transparent 6%, transparent 94%),radial-gradient(circle at 14% 48%, rgba(255,255,255,0.03) 0%, rgba(255,255,255,0.03) 6%,transparent 6%, transparent 94%),radial-gradient(circle at 28% 87%, rgba(255,255,255,0.04) 0%, rgba(255,255,255,0.04) 4%,transparent 4%, transparent 96%),radial-gradient(circle at 65% 14%, rgba(255,255,255,0.04) 0%, rgba(255,255,255,0.04) 4%,transparent 4%, transparent 96%),radial-gradient(circle at 51% 36%, rgba(255,255,255,0.04) 0%, rgba(255,255,255,0.04) 4%,transparent 4%, transparent 96%),radial-gradient(circle at 6% 93%, rgba(255,255,255,0.04) 0%, rgba(255,255,255,0.04) 4%,transparent 4%, transparent 96%),linear-gradient(135deg, rgb(23, 233, 173),rgb(29, 24, 208));
+body{
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #4070f4;
 }
-
-body {
-display: flex;
-align-items: center;
-padding-top: 40px;
-padding-bottom: 40px;
-background-color: #f5f5f5;
+.wrapper{
+  position: relative;
+  max-width: 430px;
+  width: 100%;
+  background: #fff;
+  padding: 34px;
+  border-radius: 6px;
+  box-shadow: 0 5px 10px rgba(0,0,0,0.2);
 }
-
-.form-signin {
-width: 100%;
-max-width: 330px;
-margin: auto;
-
-
-
-h1 {
-
- margin-top: 0px;
-border-top-left-radius: 3px;
-border-top-right-radius: 3px;
- color:#fff;
- padding:15px;
- text-align:center;
+.wrapper h2{
+  position: relative;
+  font-size: 22px;
+  font-weight: 600;
+  color: #333;
 }
-
-form {
- padding:15px;
- 
- .btn {
-
-   color:#fff;
-   
-   &:hover, &:focus {
-   
-     box-shadow:none;
-   }
- }
- 
- .form-control:focus {
-   border-color:#ced4da;
-   box-shadow: 5px 5px 30px rgba(0,0,0,0.2);
- }
+.wrapper h2::before{
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 3px;
+  width: 28px;
+  border-radius: 12px;
+  background: #4070f4;
 }
-
-.copyright {
-  text-align:center;
-   color:rgba(255,255,255,0.65);
- }
-
-.form-control {
- background:rgba(255,255,255,0.9);
+.wrapper form{
+  margin-top: 30px;
 }
-
-.form-check {
- display:flex;
- align-items:center;
-  color:rgba(255,255,255,0.65);
- label {
-   font-size:0.9em;
- }
- 
- input {
-   margin-right:0.5em;
-   
-   &:checked {
-     background-color:#9ce060;
-     border-color: #81c63f;
-   }
- }
+.wrapper form .input-box{
+  height: 52px;
+  margin: 18px 0;
 }
-
-.form-floating {
- &:focus-within {
-   z-index: 2;
- }
+form .input-box input{
+  height: 100%;
+  width: 100%;
+  outline: none;
+  padding: 0 15px;
+  font-size: 17px;
+  font-weight: 400;
+  color: #333;
+  border: 1.5px solid #C7BEBE;
+  border-bottom-width: 2.5px;
+  border-radius: 6px;
+  transition: all 0.3s ease;
 }
-
-input[type="email"] {
- margin-bottom: -1px;
- border-bottom-right-radius: 0;
- border-bottom-left-radius: 0;
+.input-box input:focus,
+.input-box input:valid{
+  border-color: #4070f4;
 }
-input[type="password"] {
- margin-bottom: 10px;
- border-top-left-radius: 0;
- border-top-right-radius: 0;
+form .policy{
+  display: flex;
+  align-items: center;
 }
+form h3{
+  color: #707070;
+  font-size: 14px;
+  font-weight: 500;
+  margin-left: 10px;
 }
-#loginbtn{
-  color: black;
-  background:white;
-  margin-right: 400px;
- 
+.input-box.button input{
+  color: #fff;
+  letter-spacing: 1px;
+  border: none;
+  background: #4070f4;
+  cursor: pointer;
 }
-
-
+.input-box.button input:hover{
+  background: #0e4bf1;
+}
+form .text h3{
+ color: #333;
+ width: 100%;
+ text-align: center;
+}
+form .text h3 a{
+  color: #4070f4;
+  text-decoration: none;
+}
+form .text h3 a:hover{
+  text-decoration: underline;
+}
