--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,56 +1,48 @@
+
 <!DOCTYPE html>
-<html lang="en">
-<head>
+
+<html lang="en" dir="ltr">
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>signup</title>
+    <title> Registration or Sign Up</title> 
     <link rel="stylesheet" href="signup.css">
-</head>
+   </head>
 <body>
-   
-    
-     
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-        
-        <div class="bg">
-        
-        
-        </div>
-        
-          <main class="form-signin">
-            <form action="/signup" method="post" >
-                <div id="form" class="form">
-                    <p  style="color: red;"><%= message %></p>
-                </div>
-             
-            
-              <h1 class="h3">signup</h1>
-            
-        
-        
-              <div class="form-floating">
-                <input type="text" class="form-control" id="email" name="email" placeholder="name@example.com" required>
-                <label for="floatingInput">Email address</label>
-              </div>
-              <div class="form-floating">
-                <input type="password" class="form-control" id="Password" name="password" placeholder="Password" required>
-                <label for="floatingPassword">Password</label>
-              </div>
-        
-              
-                
-             
-              <div >
-                <input class="btn btn-primary" type="submit" value="register"/>
-                <a class="btn btn-primary" id="loginid" style="text-decoration: none" href="/login">login</a> 
-               
-              </div>
-                
-              
-            </form>
-           
-         
-
+  <div class="wrapper">
+    <h2>Registration</h2>
+	<form action="/signup" method="post" id="form1">
+		<h6 style="color: red;"><%= message %></h6>
+      <div class="input-box">
+        <input type="text"name="name" placeholder="Enter your name" required>
+      </div>
+      <div class="input-box">
+        <input type="text"name="email" placeholder="Enter your email" required>
+      </div>
+      <div class="input-box">
+        <input type="password"name="password" placeholder="Create password" required>
+      </div>
+      <div class="input-box">
+        <input type="password"name="confirmPassword" placeholder="Confirm password" required>
+      </div>
+      
+      <div class="input-box button">
+		
+		<input type="Submit" value="Register Now">
+      </div>
+      <div class="text">
+        <h3>Already have an account? <a href="/login">Login now</a></h3>
+      </div>
+    </form>
+  </div>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
