--- a/views/home.ejs
+++ b/views/home.ejs
@@ -49,18 +49,31 @@
 				<div class="row">
 					<div class="text-dark">
 						
-						<% approvedPosts.forEach((post) => { %>
+						<% approvedPosts.forEach((post) => {
+							// Split the post content into words
+							const words = post.content.split(' ');
+							// Get the first 10 words
+							const limitedContent = words.slice(0, 10).join(' ');
+						  %>
 						<div class="post-blog">
 							<div class="blog-image">
 								<a href="blog-single.html">
 									<img src="images/includes/blog2.jpg" alt="">
 								</a>
 							</div> <!-- /.blog-image -->
-						<div class="text-dark">
+							<div class="blog-content">
 								<span class="meta-date"><a href="#"><%= post.created_at %></a></span>
 								<span class="meta-author"><a href="#"><%= post.user.name %></a></span>
-								<h3><a href="blog-single.html"><%= post.title %></a></h3>
-								<p class="light-text"><%= post.content %> <a href="blog-single.html">Continue Reading...</a></p>
+								<h3><a href="/single-blog/<%= post.id %>"><%= post.title %></a></h3>
+								<div class="heart-container">
+									<span id="heart-<%= post.id %>" class="fa fa-heart-o like"></span>
+								</div>
+								
+								<p class="light-text">
+									<%= limitedContent %> <a href="/single-blog/<%= post.id %>">read more...</a>
+									
+								</p>
+								
 							</div> <!-- /.blog-content -->
 						</div> <!-- /.post-blog -->
 						<% }); %>
