--- a/views/user-dashboard/create-post.ejs
+++ b/views/user-dashboard/create-post.ejs
@@ -1,33 +1,51 @@
-<%- include('../components/header') -%>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>articles</title>
+</head>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+   
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+    <li class="nav-item active">
+      <a class="nav-link text-white" href="/">Home <span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link text-white" href="">About us</a>
+      
+      
+    </li>
+    <a class="nav-link text-white "  href="/signup">Signup</a>
+    </li>
+    <a class="nav-link text-white " href="/blog-posts">
+      <i class="material-icons"></i>
+      <span>my Posts</span>
+    </a>
+    </ul>
+    
+        
 
-  <body class="h-100">
+      
+    <ul class="ml-auto ">
+    <li class="nav-item list-unstyled">
+     
+      <a class="nav-link text-white "  href="/logout"><%= user.name %> <br>  Logout</a>
+    </li>
+    </ul>
+   
+  </div> 
+  </nav>
 
-    <div class="container-fluid">
-      <div class="row">
-        <!-- Main Sidebar -->
-        <aside class="main-sidebar col-12 col-md-3 col-lg-2 px-0">
-          <div class="main-navbar">
-            <nav class="navbar align-items-stretch navbar-light bg-white flex-md-nowrap border-bottom p-0">
-              <a class="navbar-brand w-100 mr-0" href="#" style="line-height: 25px;">
-                <div class="d-table m-auto">
-                  <!-- <img id="main-logo" class="d-inline-block align-top mr-1" style="max-width: 25px;" src="images/shards-dashboards-logo.svg" alt="Shards Dashboard"> -->
-                  <span class="d-none d-md-inline ml-1"> </span>
-                </div>
-              </a>
-              <a class="toggle-sidebar d-sm-inline d-md-none d-lg-none">
-                <i class="material-icons">&#xE5C4;</i>
-              </a>
-            </nav>
-          </div>
-          <form action="#" class="main-sidebar__search w-100 border-right d-sm-flex d-md-none d-lg-none">
-            <div class="input-group input-group-seamless ml-3">
-              <div class="input-group-prepend">
-                <div class="input-group-text">
-                  <i class="fas fa-search"></i>
-                </div>
-              </div>
-              <input class="navbar-search form-control" type="text" placeholder="Search for something..." aria-label="Search"> </div>
-          </form>
+</body>
+
+  
           <div class="nav-wrapper">
             <ul class="nav flex-column">
              
@@ -47,18 +65,10 @@
             </ul>
           </div>
         </aside>
-                    <span class="d-none d-md-inline-block"></span>
                   </a>
-                  <div class="dropdown-menu dropdown-menu-small">
-                    <a class="dropdown-item" href="user-profile-lite.html">
-                      <i class="material-icons">&#xE7FD;</i> Profile</a>
-                    <a class="dropdown-item" href="components-blog-posts.html">
+                 
                    
-                    <a class="dropdown-item" href="/dashboard">
-                      <i class="material-icons">note_add</i> Add New Post</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item text-danger" href="/logout">
-                      <i class="material-icons text-danger">&#xE879;</i> Logout </a>
+                   
                   </div>
                 </li>
               </ul>
@@ -75,6 +85,9 @@
             <div class="page-header row no-gutters py-4">
               <div class="col-12 col-sm-4 text-center text-sm-left mb-0">
                 <span class="text-uppercase page-subtitle"></span>
+               
+            
+
                 <h3 class="page-title">Add New Post</h3>
               </div>
             </div>
@@ -82,18 +95,18 @@
             <div class="row">
               <div class="col-lg-9 col-md-12">
                 <!-- Add New Post Form -->
-                <div class="card card-small mb-3">
+   
 					<% if (message === 'success') { %>
 						<div class="alert alert-success alert-dismissible fade show mb-0" role="alert">
 						  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
 							<span aria-hidden="true">&times;</span>
 						  </button>
 						  <i class="fa fa-check mx-2"></i>
-						  <strong>Success!</strong> Your post has been added!
+						  <strong>Success!</strong> Your post is pending for aprovel!
 						</div>
 					  <% } %>
 					  
-					  <div class="card-body">
+					  <div class="">
 						<form class="add-new-post" action="/blog-post" method="post">
 						  <div class="form-group">
 							<input class="form-control form-control-lg mb-3" type="text" name="title" placeholder="Your Post Title">
